--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 							alt="abstrakte, farbstarke Komposition mit großen pinkfarbenen Seerosen und grünen Blättern im unteren Bereich. Das Bild ist geprägt von einer dynamischen Mischung aus geometrischen Formen und fließenden Elementen in Türkis, Rosa und Weiß, die eine friedliche, aber kraftvolle Naturstimmung erzeugen.">
 						<figcaption>
 							<h3>Die Freude auf dem Weg</h3>2025 Acryl auf Leinwand
+							<p>80x80 cm</p>
 						</figcaption>
 					</figure>
 					<figure class="small">
@@ -46,6 +47,7 @@
 							alt="Farbenfrohes, expressives Gemälde eines Elefantenkopfs im Profil mit erhobenem Rüssel. Der Elefant ist in kräftigen Grautönen gemalt, umgeben von einem lebendigen Hintergrund aus vertikalen blauen Wasserfall-Linien, leuchtend gelben Flächen und abstrahierten Blumen in Pink und Blau im Vordergrund.">
 						<figcaption>
 							<h3>Der Elefant</h3>2024 Acryl auf Leinwand
+							<p>70x50 cm</p>
 						</figcaption>
 					</figure>
 					<figure class="large">
@@ -53,13 +55,14 @@
 							alt="Farbenfrohes, expressives Gemälde einer Landschaft mit abstrakten und reallistischen Elementen.">
 						<figcaption>
 							<h3>Intuitive Landschaft</h3>2024 Acryl auf Leinwand
+							<p>100x70 cm</p>
 						</figcaption>
 					</figure>
 			</section>
 		</div>
 		<section id="kataloge">
 			<h2>Kataloge</h2>
-			<p>Hier kannst du meine Arbeiten in digitaler Form durchblaettern, klicke einfach auf das Bild:</p>
+			<p>Hier kannst du meine Arbeiten in digitaler Form durchblättern, klicke einfach auf das Bild:</p>
 			<div class="grid-container">
 				<figure class="kataloge-item">
 					<a href="https://new.express.adobe.com/publishedV2/urn:aaid:sc:EU:2550924b-4747-4744-bf46-4a66e50d884d?promoid=Y69SGM5H&mv=other"
@@ -81,7 +84,7 @@
 				<h2>Intuitive Künstlerin aus Mannheim</h2>
 				<div class="bio-text">
 					<p> Was damals mit dem Zeichnen von Pflanzen, Tieren und Landschaften
-						begann, früh beeinflusst von den farbenfrohen Werken von Claude Monet,entwickelte sich im Laufe
+						begann, früh beeinflusst von den farbenfrohen Werken von Claude Monet, entwickelte sich im Laufe
 						der
 						Jahre zu einer eigenen künstlerischen Sprache, die heute zwischen Realismus und Abstraktion
 						pendelt.
@@ -154,15 +157,17 @@
 						alt="Collage in türkis und rosa, auf dem eine weißumrandete Figur zu sehen ist">
 					<figcaption>
 						<h3>Der Engel</h3>Collage 2025
+						<p>20x24 cm</p>
 					</figcaption>
 				</figure>
 				<figure class="large">
 					<img src="Schwäne.jpg" alt="abstraktes Bild in dunkelblau rosa mit zwei Schwänen.">
 					<figcaption>
-						<h3>Die Schwäne...</h3>
+						<h3>Die Schwäne...</h3>Acryl auf Leinwand 2024
+						<p>60x50 cm</p>
 						<h3>...und weitere Bilder von 2024/2025 sind im Februar 2026 bei der
 							Ausstellung im
-							Almend auf dem Almenhof zu sehen. Kommt gerne vorbei.</h3>Acryl auf Leinwand 2024
+							Almend auf dem Almenhof zu sehen. Kommt gerne vorbei.</h3>
 					</figcaption>
 				</figure>
 			</div>
