--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<li><a href="#ueber-mich">Über mich</a></li>
 					<li><a href="#aktuelles">Aktuelles</a></li>
 					<li><a href="#kontakt">Kontakt</a></li>
-					<li><a href="#impressum">Impessum</a></li>
+					<li><a href="#impressum">Impressum</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -35,26 +35,26 @@
 				<div class="grid-container">
 
 					<figure class="large">
+						<h3>Die Freude auf dem Weg</h3>
 						<img src="AufdemWegderFreude.jpg"
-							alt="abstrakte, farbstarke Komposition mit großen pinkfarbenen Seerosen und grünen Blättern im unteren Bereich. Das Bild ist geprägt von einer dynamischen Mischung aus geometrischen Formen und fließenden Elementen in Türkis, Rosa und Weiß, die eine friedliche, aber kraftvolle Naturstimmung erzeugen.">
-						<figcaption>
-							<h3>Die Freude auf dem Weg</h3>2025 Acryl auf Leinwand
+							alt="Abstrakte, leuchtend pinke Seerosen im Profil mit grünen Blättern im Vordergrund. Dahinter ragen weiße, fließende Strukturen wie Wurzeln in einen Baumstamm und einem petrolem, geometrisch unterteilten Hintergrund auf.">
+						<figcaption>2025 Acryl auf Leinwand
 							<p>80x80 cm</p>
 						</figcaption>
 					</figure>
 					<figure class="small">
+						<h3>Der Elefant</h3>
 						<img src="Elefant.jpg"
-							alt="Farbenfrohes, expressives Gemälde eines Elefantenkopfs im Profil mit erhobenem Rüssel. Der Elefant ist in kräftigen Grautönen gemalt, umgeben von einem lebendigen Hintergrund aus vertikalen blauen Wasserfall-Linien, leuchtend gelben Flächen und abstrahierten Blumen in Pink und Blau im Vordergrund.">
-						<figcaption>
-							<h3>Der Elefant</h3>2024 Acryl auf Leinwand
+							alt="Ein expressives Porträt eines grauen Elefanten mit erhobenem Rüssel. Das Tier ist eingebettet in eine bunte Kulisse aus blauen, kelchartigen Blumen und pinken Blüten vor einem strahlend gelben Hintergrund.">
+						<figcaption>2024 Acryl auf Leinwand
 							<p>70x50 cm</p>
 						</figcaption>
 					</figure>
 					<figure class="large">
+						<h3>Intuitive Landschaft</h3>
 						<img src="intuitiveLandschaften.jpg"
-							alt="Farbenfrohes, expressives Gemälde einer Landschaft mit abstrakten und reallistischen Elementen.">
-						<figcaption>
-							<h3>Intuitive Landschaft</h3>2024 Acryl auf Leinwand
+							alt="Fuenf schlanke, hellblau leuchtende Baumstämme ohne Blätter stehen vor einer vielschichtigen Berglandschaft in Violett, Grün und Gold. Das Bild besticht durch seine vertikale Struktur und die kühle, magische Farbwirkung.">
+						<figcaption>2024 Acryl auf Leinwand
 							<p>100x70 cm</p>
 						</figcaption>
 					</figure>
@@ -67,13 +67,15 @@
 				<figure class="kataloge-item">
 					<a href="https://new.express.adobe.com/publishedV2/urn:aaid:sc:EU:2550924b-4747-4744-bf46-4a66e50d884d?promoid=Y69SGM5H&mv=other"
 						target="_blank" rel="noopener" aria-label="Katalog 2024 oeffnen">
-						<img src="cover24.jpg" alt="Deckblatt vom Katalog 2024">
+						<img src="cover24.jpg"
+							alt="Katalog 2024, Ein stilisierter Vogel in verschiedenen Smaragd- und Türkistönen fliegt mit weit ausgebreiteten Schwingen nach links. Er ist umgeben von spritzigen Farbakzenten in Pink und Weiß sowie angedeuteten grünen Blättern.">
 					</a>
 				</figure>
 				<figure class="kataloge-item">
 					<a href="https://new.express.adobe.com/publishedV2/urn:aaid:sc:EU:35bd4a78-9cd6-47b8-850c-c6db24461802?promoid=Y69SGM5H&mv=other"
 						target="_blank" rel="noopener" aria-label="Katalog 2025 öffnen">
-						<img src="cover25.jpg" alt="Deckblatt vom Katalog 2025">
+						<img src="cover25.jpg"
+							alt="Katalog 2025,Zwei detailreiche weiße Schmetterlinge mit blauen Flügelrändern schweben zwischen großen, kräftig pinkfarbenen Magnolienblüten. Die Komposition wirkt durch sanfte Grau- und Türkistöne im Hintergrund die eine Silhouette zeigen, leicht und luftig.  ">
 					</a>
 				</figure>
 			</div>
@@ -85,18 +87,16 @@
 				<div class="bio-text">
 					<p> Was damals mit dem Zeichnen von Pflanzen, Tieren und Landschaften
 						begann, früh beeinflusst von den farbenfrohen Werken von Claude Monet, entwickelte sich im Laufe
-						der
-						Jahre zu einer eigenen künstlerischen Sprache, die heute zwischen Realismus und Abstraktion
+						der Jahre zu einer eigenen künstlerischen Sprache, die heute zwischen Realismus und Abstraktion
 						pendelt.
 						Beide Pole fließen in meinen Arbeiten ineinander und spiegeln die Vielschichtigkeit meines
 						inneren
 						Erlebens.</p>
 
 					<p>Als sensibler Mensch, der die Welt intensiv erlebt, wurde Kunst für mich zu einem stabilen Ort,
-						an
-						dem ich Eindrücke ordnen, Ruhe finden und Klarheit gewinnen kann.So wurde die Kunst zu einem
-						Raum,
-						in dem ich Erfahrungen verwandeln und innere Zustände sichtbar machen konnte – mit der nötigen
+						an dem ich Eindrücke ordnen, Ruhe finden und Klarheit gewinnen kann.So wurde die Kunst zu einem
+						Raum, in dem ich Erfahrungen verwandeln und innere Zustände sichtbar machen konnte – mit der
+						nötigen
 						Distanz, um Klarheit zu gewinnen.</p>
 
 					<p>Heute ist das Malen für mich ein Weg, mich selbst zu verorten: zwischen Stille und Intensität,
@@ -108,23 +108,19 @@
 						meinen kreativen Prozess weiter öffneten.</p>
 					<p>Kreativität ist für mich jedoch nicht auf das Atelier beschränkt. Sie begleitet mich im Alltag in
 						vielen kleinen Formen: im Sammeln von Fundstücken auf Spaziergängen, im spielerischen Basteln,
-						im
-						spontanen Gestalten mit meinen Kindern oder im Flow‑Zustand, der oft ganz unerwartet entsteht.
-						Diese
-						Offenheit für Impulse prägt meine Arbeit und führt mich immer wieder zu neuen Materialien,
-						Themen
-						und Ausdrucksweisen.</p>
+						in spontanen Gestalten mit meinen Kindern oder im Flow‑Zustand, der oft ganz unerwartet
+						entsteht.
+						Diese Offenheit für Impulse prägt meine Arbeit und führt mich immer wieder zu neuen Materialien,
+						Themen und Ausdrucksweisen.</p>
 
 					<p>Inzwischen arbeite ich häufig mit selbst erstellten Collagen aus Fotografien und Bildern – aus
-						alten
-						Büchern. Diese Bildausschnitte dienen mir als Ausgangspunkt für neue Kompositionen und
-						ermöglichen
-						es mir, zunächst im Kleinformat zu experimentieren, bevor größere Arbeiten entstehen. So werden
-						sie
-						zugleich Inspiration und eigenständige Kunstwerke.</p>
+						alten Büchern. Diese Bildausschnitte dienen mir als Ausgangspunkt für neue Kompositionen und
+						ermöglichen es mir, zunächst im Kleinformat zu experimentieren, bevor größere Arbeiten
+						entstehen. So werden
+						sie zugleich Inspiration und eigenständige Kunstwerke.</p>
 					<p>Das Gestalten erlaubt mir eine unmittelbare Auseinandersetzung mit dem Moment – eine Verbindung
-						von
-						Wahrnehmung, Emotion und Gestaltung. Es ist weniger ein „Tun“ als ein „Zulassen“, bei dem der
+						von Wahrnehmung, Emotion und Gestaltung. Es ist weniger ein „Tun“ als ein „Zulassen“, bei dem
+						der
 						schöpferische Akt zu einer Form der Selbstwahrnehmung wird.Trotz dieser Offenheit bleibt die
 						Ästhetik für mich zentral. Freude am Schönen, Leichtigkeit und ein Sinn für Harmonie begleiten
 						meinen Prozess – selbst dann, wenn ein Motiv reduziert oder fragmentarisch erscheint.</p>
@@ -135,15 +131,16 @@
 		<section>
 			<div class="grid-container">
 				<figure>
-					<img src="künstlerin.jpg" alt="Die Kuenstlerin Femke Petzsch">
 					<figcaption>Künstlerin Femke
 					</figcaption>
+					<img src="künstlerin.jpg"
+						alt="Ein freundliches Nahaufnahmen-Selfie der lächelnden Künstlerin im Freien. Sie trägt einen hellgrauen Strickpullover und eine braune Sonnenbrille auf dem Kopf; der Hintergrund zeigt einen sonnigen, leicht unscharfen Waldweg.">
 				</figure>
 				<figure class="small">
+					<h3>Auszeichnung</h3>
 					<img src="zertifikat.jpg"
-						alt="Verdiensturkunde für kuenstlerische Leistung, Luxembourg Art Prize 2025">
-					<figcaption>
-						<h3>Auszeichnung</h3>Luxembourg Art Prize 2025
+						alt="Eine offizielle Verdiensturkunde für künstlerische Leistung, ausgestellt von der Pinakothek am 1. Dezember 2025 für Femke Petzsch im Rahmen des Luxembourg Art Prize. Das Dokument ist klassisch gestaltet mit dekorativem Rahmen, Wappen und einem QR-Code zur Authentifizierung.">
+					<figcaption>Luxembourg Art Prize 2025
 					</figcaption>
 				</figure>
 			</div>
@@ -153,17 +150,18 @@
 			<h2>Aktuelles</h2>
 			<div class="grid-container">
 				<figure>
+					<h3>Der Engel</h3>
 					<img src="DerEngel.jpg"
-						alt="Collage in türkis und rosa, auf dem eine weißumrandete Figur zu sehen ist">
-					<figcaption>
-						<h3>Der Engel</h3>Collage 2025
+						alt="Abstrakte Collage einer hellen, knospenartigen Silhouette aus rosa-goldenen Mustern vor einem tief-türkisen Hintergrund mit hellen, wasserblasen-ähnlichen Kreisen.">
+					<figcaption>Collage 2025
 						<p>20x24 cm</p>
 					</figcaption>
 				</figure>
 				<figure class="large">
-					<img src="Schwäne.jpg" alt="abstraktes Bild in dunkelblau rosa mit zwei Schwänen.">
-					<figcaption>
-						<h3>Die Schwäne...</h3>Acryl auf Leinwand 2024
+					<h3>Die Schwäne</h3>
+					<img src="Schwäne.jpg"
+						alt="Ein Schwan mit langgestreckten Hals ragt durch eine dynamische, neblige Landschaft aus Violett und Blau. Im Vordergrund setzen ein angedeutet Küken und zarte, weiße Doldenblüten helle Akzente vor einem grünlichen Lichtschein.">
+					<figcaption>Acryl auf Leinwand 2024
 						<p>60x50 cm</p>
 						<h3>...und weitere Bilder von 2024/2025 sind im Februar 2026 bei der
 							Ausstellung im
