--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description"
-		content="Portfolio von Femke Petzsch - intuitive Kunst, Collagen und Malerei mit Acrylfarbe. Galerie, aktuelle Kataloge und Einblicke in den kreativen Prozess.">
+		content="Portfolio von Femke Petzsch - intuitive Kunst, Collagen und Malerei mit Acrylfarbe aus Mannheim. Galerie, aktuelle Kataloge und Einblicke in den kreativen Prozess.">
 	<title>Femke Art</title>
 	<link rel="stylesheet" href="style.css">
 </head>
@@ -45,7 +45,7 @@
 					<figure class="small">
 						<h3>Der Elefant</h3>
 						<img src="Elefant.jpg"
-							alt="Ein expressives Porträt eines grauen Elefanten mit erhobenem Rüssel. Das Tier ist eingebettet in eine bunte Kulisse aus blauen, kelchartigen Blumen und pinken Blüten vor einem strahlend gelben Hintergrund.">
+							alt="Ein expressives Portraet eines grauen Elefanten mit erhobenem Ruessel. Das Tier ist eingebettet in eine bunte Kulisse aus blauen, kelchartigen Blumen und pinken Blueten vor einem strahlend gelben Hintergrund.">
 						<figcaption>2024 Acryl auf Leinwand
 							<p>70x50 cm</p>
 						</figcaption>
@@ -53,7 +53,7 @@
 					<figure class="large">
 						<h3>Intuitive Landschaft</h3>
 						<img src="intuitiveLandschaften.jpg"
-							alt="Fuenf schlanke, hellblau leuchtende Baumstämme ohne Blätter stehen vor einer vielschichtigen Berglandschaft in Violett, Grün und Gold. Das Bild besticht durch seine vertikale Struktur und die kühle, magische Farbwirkung.">
+							alt="Fuenf schlanke, hellblau leuchtende Baumstaemme ohne Blaetter stehen vor einer vielschichtigen Berglandschaft in Violett, Gruen und Gold. Das Bild besticht durch seine vertikale Struktur und die kuehle, magische Farbwirkung.">
 						<figcaption>2024 Acryl auf Leinwand
 							<p>100x70 cm</p>
 						</figcaption>
@@ -68,14 +68,14 @@
 					<a href="https://new.express.adobe.com/publishedV2/urn:aaid:sc:EU:2550924b-4747-4744-bf46-4a66e50d884d?promoid=Y69SGM5H&mv=other"
 						target="_blank" rel="noopener" aria-label="Katalog 2024 oeffnen">
 						<img src="cover24.jpg"
-							alt="Katalog 2024, Ein stilisierter Vogel in verschiedenen Smaragd- und Türkistönen fliegt mit weit ausgebreiteten Schwingen nach links. Er ist umgeben von spritzigen Farbakzenten in Pink und Weiß sowie angedeuteten grünen Blättern.">
+							alt="Katalog 2024 oeffnen (PDF), Ein stilisierter Vogel in verschiedenen Smaragd- und Tuerkistoenen fliegt mit weit ausgebreiteten Schwingen nach links. Er ist umgeben von spritzigen Farbakzenten in Pink und Weiß sowie angedeuteten gruenen Blaettern.">
 					</a>
 				</figure>
 				<figure class="kataloge-item">
 					<a href="https://new.express.adobe.com/publishedV2/urn:aaid:sc:EU:35bd4a78-9cd6-47b8-850c-c6db24461802?promoid=Y69SGM5H&mv=other"
 						target="_blank" rel="noopener" aria-label="Katalog 2025 öffnen">
 						<img src="cover25.jpg"
-							alt="Katalog 2025,Zwei detailreiche weiße Schmetterlinge mit blauen Flügelrändern schweben zwischen großen, kräftig pinkfarbenen Magnolienblüten. Die Komposition wirkt durch sanfte Grau- und Türkistöne im Hintergrund die eine Silhouette zeigen, leicht und luftig.  ">
+							alt="Katalog 2025 oeffnen (PDF), Zwei detailreiche weiße Schmetterlinge mit blauen Flügelraendern schweben zwischen großen, kraeftig pinkfarbenen Magnolienblueten. Die Komposition wirkt durch sanfte Grau- und Tuerkistoene im Hintergrund die eine Silhouette zeigen, leicht und luftig.">
 					</a>
 				</figure>
 			</div>
@@ -85,58 +85,41 @@
 			<div class="container">
 				<h2>Intuitive Künstlerin aus Mannheim</h2>
 				<div class="bio-text">
-					<p> Was damals mit dem Zeichnen von Pflanzen, Tieren und Landschaften
-						begann, früh beeinflusst von den farbenfrohen Werken von Claude Monet, entwickelte sich im Laufe
-						der Jahre zu einer eigenen künstlerischen Sprache, die heute zwischen Realismus und Abstraktion
-						pendelt.
-						Beide Pole fließen in meinen Arbeiten ineinander und spiegeln die Vielschichtigkeit meines
-						inneren
-						Erlebens.</p>
-
-					<p>Als sensibler Mensch, der die Welt intensiv erlebt, wurde Kunst für mich zu einem stabilen Ort,
-						an dem ich Eindrücke ordnen, Ruhe finden und Klarheit gewinnen kann.So wurde die Kunst zu einem
-						Raum, in dem ich Erfahrungen verwandeln und innere Zustände sichtbar machen konnte – mit der
-						nötigen
-						Distanz, um Klarheit zu gewinnen.</p>
-
-					<p>Heute ist das Malen für mich ein Weg, mich selbst zu verorten: zwischen Stille und Intensität,
-						zwischen Offenheit und Stärke.Auf der Suche nach neuen Ausdrucksformen ließ ich mich von
-						verschiedenen künstlerischen Ansätzen inspirieren.</p>
-					<p>Ein wichtiger Impuls kam durch die intuitive Malerei von Flora Bowley. Ihre Bücher und Videos
-						ermutigten mich, freier zu arbeiten, Kontrolle loszulassen und meinem Gefühl zu vertrauen. Über
-						diesen Zugang entdeckte ich auch Online‑Retreats wie das frauengeführte „Women Unleashed“, die
-						meinen kreativen Prozess weiter öffneten.</p>
-					<p>Kreativität ist für mich jedoch nicht auf das Atelier beschränkt. Sie begleitet mich im Alltag in
-						vielen kleinen Formen: im Sammeln von Fundstücken auf Spaziergängen, im spielerischen Basteln,
-						in spontanen Gestalten mit meinen Kindern oder im Flow‑Zustand, der oft ganz unerwartet
-						entsteht.
-						Diese Offenheit für Impulse prägt meine Arbeit und führt mich immer wieder zu neuen Materialien,
-						Themen und Ausdrucksweisen.</p>
-
-					<p>Inzwischen arbeite ich häufig mit selbst erstellten Collagen aus Fotografien und Bildern – aus
-						alten Büchern. Diese Bildausschnitte dienen mir als Ausgangspunkt für neue Kompositionen und
-						ermöglichen es mir, zunächst im Kleinformat zu experimentieren, bevor größere Arbeiten
-						entstehen. So werden
-						sie zugleich Inspiration und eigenständige Kunstwerke.</p>
-					<p>Das Gestalten erlaubt mir eine unmittelbare Auseinandersetzung mit dem Moment – eine Verbindung
-						von Wahrnehmung, Emotion und Gestaltung. Es ist weniger ein „Tun“ als ein „Zulassen“, bei dem
-						der
-						schöpferische Akt zu einer Form der Selbstwahrnehmung wird.Trotz dieser Offenheit bleibt die
-						Ästhetik für mich zentral. Freude am Schönen, Leichtigkeit und ein Sinn für Harmonie begleiten
-						meinen Prozess – selbst dann, wenn ein Motiv reduziert oder fragmentarisch erscheint.</p>
+					<p>Was mit dem Zeichnen von Pflanzen und Landschaften begann – früh inspiriert von Claude Monets
+						Farbenwelt – ist heute meine eigene künstlerische Sprache zwischen Realismus und Abstraktion. In
+						meinen Arbeiten fließen diese Pole ineinander und spiegeln die Vielschichtigkeit meines Erlebens
+						wider.
+						Als sensibler Mensch ist die Kunst für mich ein Anker. Sie ist der Ort, an dem ich Eindrücke
+						ordne, Ruhe finde und innere Zustände sichtbar mache. Heute ist das Malen mein Weg, mich selbst
+						zu verorten: zwischen Stille und Intensität, zwischen Offenheit und Stärke.
+					</p>
+					<p>Ein entscheidender Wendepunkt war die intuitive Malerei von Flora Bowley. Durch sie habe ich
+						gelernt, Kontrolle loszulassen und meinem Gefühl zu vertrauen. Dieser freie Zugang öffnete
+						meinen kreativen Prozess nachhaltig.
+						Kreativität ist für mich ohnehin nicht aufs Atelier beschränkt. Sie begleitet mich im Alltag:
+						beim Sammeln von Fundstücken, im Spiel mit meinen Kindern oder im unerwarteten Flow-Zustand.
+						Diese Offenheit führt mich immer wieder zu neuen Materialien. Aktuell arbeite ich viel mit
+						Collagen aus alten Büchern und eigenen Fotografien. Diese Bildausschnitte sind für mich
+						Experimentierfeld und Inspiration zugleich.
+						Letztlich ist das Gestalten für mich weniger ein „Tun“ als ein „Zulassen“. Es ist eine
+						Verbindung von Wahrnehmung und Emotion. Dabei ist mir die Ästhetik wichtig: Die Freude am
+						Schönen und ein Sinn für Harmonie begleiten jeden meiner Schritte – auch dort, wo das Motiv
+						abstrakt oder fragmentarisch wird.
+					</p>
 				</div>
 			</div>
 		</section>
 		<h3 class="signature">Femke Petzsch</h3>
 		<section>
-			<div class="grid-container">
-				<figure>
-					<figcaption>Künstlerin Femke
+			<div class="grid-container" role="region" aria-label="Details">
+				<figure tabindex="0">
+					<figcaption>
+						<h3>Künstlerin Femke</h3>
 					</figcaption>
 					<img src="künstlerin.jpg"
 						alt="Ein freundliches Nahaufnahmen-Selfie der lächelnden Künstlerin im Freien. Sie trägt einen hellgrauen Strickpullover und eine braune Sonnenbrille auf dem Kopf; der Hintergrund zeigt einen sonnigen, leicht unscharfen Waldweg.">
 				</figure>
-				<figure class="small">
+				<figure class="small" tabindex="0">
 					<h3>Auszeichnung</h3>
 					<img src="zertifikat.jpg"
 						alt="Eine offizielle Verdiensturkunde für künstlerische Leistung, ausgestellt von der Pinakothek am 1. Dezember 2025 für Femke Petzsch im Rahmen des Luxembourg Art Prize. Das Dokument ist klassisch gestaltet mit dekorativem Rahmen, Wappen und einem QR-Code zur Authentifizierung.">
@@ -158,14 +141,11 @@
 					</figcaption>
 				</figure>
 				<figure class="large">
-					<h3>Die Schwäne</h3>
-					<img src="Schwäne.jpg"
-						alt="Ein Schwan mit langgestreckten Hals ragt durch eine dynamische, neblige Landschaft aus Violett und Blau. Im Vordergrund setzen ein angedeutet Küken und zarte, weiße Doldenblüten helle Akzente vor einem grünlichen Lichtschein.">
-					<figcaption>Acryl auf Leinwand 2024
-						<p>60x50 cm</p>
-						<h3>...und weitere Bilder von 2024/2025 sind im Februar 2026 bei der
-							Ausstellung im
-							Almend auf dem Almenhof zu sehen. Kommt gerne vorbei.</h3>
+					<h3>Ausstellung 2026</h3>
+					<img src="Flyer-2.jpg"
+						alt="Veranstaltungsplakat: Kunstausstellung „Im Almend im Almenhof“. Ausstellungszeitraum vom 1. Februar bis zum 31. März 2026 im Almend Café & Bistro, Niederfeldstraße 69, 68199 Mannheim. Gezeigt werden intuitive Acrylbilder mit Tiermotiven.">
+					<figcaption>
+						<h3>Kunstausstellung „Im Almend im Almenhof“</h3>
 					</figcaption>
 				</figure>
 			</div>
@@ -180,15 +160,13 @@
 					<a href="mailto:femke.petzsch@gmail.com">schreib mir gerne eine E‑Mail.</a>
 				</p>
 			</section>
-
-			<hr>
 			<section id="impressum">
 				<h2>Impressum</h2>
 				<div class="legal-info">
 					<p>Angaben gemäß § 5 TMG
 
 						Femke Petzsch,
-						Im Lohr 28, 68199 Mannheim
+						Im Lohr 28, 68199 Mannheim,
 						E‑Mail: femke.petzsch@gmail.com
 					</p>
 
