--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<h2>Galerie</h2>
 				<div class="grid-container">
 
-					<figure class="large">
+					<figure class="large" tabindex="0">
 						<h3>Die Freude auf dem Weg</h3>
 						<img src="AufdemWegderFreude.jpg"
 							alt="Abstrakte, leuchtend pinke Seerosen im Profil mit grünen Blättern im Vordergrund. Dahinter ragen weiße, fließende Strukturen wie Wurzeln in einen Baumstamm und einem petrolem, geometrisch unterteilten Hintergrund auf.">
@@ -42,7 +42,7 @@
 							<p>80x80 cm</p>
 						</figcaption>
 					</figure>
-					<figure class="small">
+					<figure class="small" tabindex="0">
 						<h3>Der Elefant</h3>
 						<img src="Elefant.jpg"
 							alt="Ein expressives Portraet eines grauen Elefanten mit erhobenem Ruessel. Das Tier ist eingebettet in eine bunte Kulisse aus blauen, kelchartigen Blumen und pinken Blueten vor einem strahlend gelben Hintergrund.">
@@ -50,7 +50,7 @@
 							<p>70x50 cm</p>
 						</figcaption>
 					</figure>
-					<figure class="large">
+					<figure class="large" tabindex="0">
 						<h3>Intuitive Landschaft</h3>
 						<img src="intuitiveLandschaften.jpg"
 							alt="Fuenf schlanke, hellblau leuchtende Baumstaemme ohne Blaetter stehen vor einer vielschichtigen Berglandschaft in Violett, Gruen und Gold. Das Bild besticht durch seine vertikale Struktur und die kuehle, magische Farbwirkung.">
@@ -64,14 +64,14 @@
 			<h2>Kataloge</h2>
 			<p>Hier kannst du meine Arbeiten in digitaler Form durchblättern, klicke einfach auf das Bild:</p>
 			<div class="grid-container">
-				<figure class="kataloge-item">
+				<figure class="kataloge-item" tabindex="0">
 					<a href="https://new.express.adobe.com/publishedV2/urn:aaid:sc:EU:2550924b-4747-4744-bf46-4a66e50d884d?promoid=Y69SGM5H&mv=other"
 						target="_blank" rel="noopener" aria-label="Katalog 2024 oeffnen">
 						<img src="cover24.jpg"
 							alt="Katalog 2024 oeffnen (PDF), Ein stilisierter Vogel in verschiedenen Smaragd- und Tuerkistoenen fliegt mit weit ausgebreiteten Schwingen nach links. Er ist umgeben von spritzigen Farbakzenten in Pink und Weiß sowie angedeuteten gruenen Blaettern.">
 					</a>
 				</figure>
-				<figure class="kataloge-item">
+				<figure class="kataloge-item" tabindex="0">
 					<a href="https://new.express.adobe.com/publishedV2/urn:aaid:sc:EU:35bd4a78-9cd6-47b8-850c-c6db24461802?promoid=Y69SGM5H&mv=other"
 						target="_blank" rel="noopener" aria-label="Katalog 2025 öffnen">
 						<img src="cover25.jpg"
@@ -132,7 +132,7 @@
 		<section id="aktuelles">
 			<h2>Aktuelles</h2>
 			<div class="grid-container">
-				<figure>
+				<figure tabindex="0">
 					<h3>Der Engel</h3>
 					<img src="DerEngel.jpg"
 						alt="Abstrakte Collage einer hellen, knospenartigen Silhouette aus rosa-goldenen Mustern vor einem tief-türkisen Hintergrund mit hellen, wasserblasen-ähnlichen Kreisen.">
@@ -140,7 +140,7 @@
 						<p>20x24 cm</p>
 					</figcaption>
 				</figure>
-				<figure class="large">
+				<figure class="large" tabindex="0">
 					<h3>Ausstellung 2026</h3>
 					<img src="Flyer-2.jpg"
 						alt="Veranstaltungsplakat: Kunstausstellung „Im Almend im Almenhof“. Ausstellungszeitraum vom 1. Februar bis zum 31. März 2026 im Almend Café & Bistro, Niederfeldstraße 69, 68199 Mannheim. Gezeigt werden intuitive Acrylbilder mit Tiermotiven.">
@@ -154,15 +154,20 @@
 	</main>
 	<footer>
 		<div class="container">
-			<section id="kontakt">
+			<section id="kontakt" tabindex="0">
 				<h2>Kontakt:</h2>
 				<p>Ich freue mich über Austausch und neue Impulse,
 					<a href="mailto:femke.petzsch@gmail.com">schreib mir gerne eine E‑Mail.</a>
 				</p>
+
+				<p>Da mir Inklusion ein großes Anliegen ist, arbeite ich stetig daran, diese Webseite für alle Menschen
+					zugänglich zu gestalten. Solltest du dennoch auf Barrieren stoßen oder Tipps zur Verbesserung der
+					Barrierefreiheit haben, freue ich mich sehr über deine Rückmeldung!
+				</p>
 			</section>
 			<section id="impressum">
 				<h2>Impressum</h2>
-				<div class="legal-info">
+				<div class="legal-info" tabindex="0">
 					<p>Angaben gemäß § 5 TMG
 
 						Femke Petzsch,
@@ -171,7 +176,7 @@
 					</p>
 
 					<p>Verantwortlich für den Inhalt nach § 18 Abs. 2 MStV:
-						Femke Petzsch</p>
+						Femke Petzsch 2026</p>
 				</div>
 			</section>
 		</div>
